lintian (2.5.22.2) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

 -- Niels Thykier <niels@thykier.net>  Sun, 30 Mar 2014 22:12:06 +0200

lintian (2.5.22.1) unstable; urgency=medium

  * checks/ocaml.{desc,pm}:
    + [NT] Replace unnecessary uses of file_info with index.

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of libmpg123.
  * data/fields/perl-provides:
    + [NT] Refresh against Perl 5.18.2.
  * data/spelling/corrections:
    + [RG] Add "functiosn" to the list of spelling mistakes.

  * frontend/lintian:
    + [NT] Fix a regression that completely broke the
      command-line argument "--packages-from-file", when
      the file was "-".

  * lib/Lintian/Relation.pm:
    + [JW,NT] Fix dependency-testing issues caused by too
      greedy regular expressions in the dependency parser.
      (Closes: #742989)

  * reporting/templates/tags.tmpl:
    + [JW,NT] Fix grammatical error in a template.
      (Closes: #742985)

 -- Niels Thykier <niels@thykier.net>  Sun, 30 Mar 2014 20:55:52 +0200

lintian (2.5.22) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-restriction-label-in-source-relation
      - invalid-restriction-namespace-in-source-relation
      - invalid-restriction-term-in-source-relation
      - license-problem-gfdl-non-official-text
      - license-problem-non-free-RFC-BCP78
      - privacy-breach-google-plus
      - privacy-breach-twitter
      - restriction-list-with-debhelper-with-conflicting-debhelper-version
      - restriction-list-with-debhelper-without-debhelper-version
      - restriction-list-with-versioned-dpkg-dev-conflict
      - restriction-list-without-versioned-dpkg-dev-dependency
      - source-is-missing
      - stageX-profile-used-but-no-binary-package-dropped

  * checks/*:
    + [NT] Avoid using "I" or "we" in tag descriptions.
    + [NT] When looping over the names of binary packages,