@@ -1,0 +1,22 @@
+#!/bin/sh
+
+set -e
+
+### BEGIN INIT INFO
+# Provides: init.d-lsb-headers-all
+# Required-Start: $all
+# Should-Start: $all
+# Required-Stop: $all
+# Default-Start: 2 3 4 5
+# Default-Stop:
+# Short-Description: Test script for all virtual facility
+# Description: The short description pretty much covers it : test $all virtual facility
+### END INIT INFO
+
+. /lib/lsb/init-functions
+
+case "$1" in
+    start|stop|force-reload|restart|status|*)
+	echo hello world
+    ;;
+esac
